Change minimum requirements from Java 11 to 8